[package]
name = "postscript_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.42"
cron = "0.15.0"
dotenvy = "0.15.7"
resend-rs = "0.19.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
